--- a/index.html
+++ b/index.html
@@ -10,8 +10,12 @@
 
      <!-- favicon for chrome Icon -->
       <link rel="icon" type="image/png" sizes="192x192" href="/src/assets/logo-192.png" />
-
+<link
+  rel="stylesheet"
+  href="https://unpkg.com/leaflet/dist/leaflet.css"
+/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <meta name="description" content="Unlock powerful insights with our advanced analytics platform. Track performance, visualize data trends, and make smarter business decisions in real time." />
     <title>Nox Analytics</title>
   </head>
